Set: Global style

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,12 @@
   },
   "ignorePatterns": ["node_modules/"],
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
