--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
     "noImplicitThis": true, //this 키워드가 any 타입일 경우 에러내기
     "alwaysStrict": true, //자바스크립트 "use strict" 모드 켜기
 
-    "noUnusedLocals": true, //쓰지않는 지역변수 있으면 에러내기
-    "noUnusedParameters": true, //쓰지않는 파라미터 있으면 에러내기
+    // "noUnusedLocals": true, //쓰지않는 지역변수 있으면 에러내기
+    // "noUnusedParameters": true, //쓰지않는 파라미터 있으면 에러내기
     "noImplicitReturns": true, //함수에서 return 빼먹으면 에러내기
     "noFallthroughCasesInSwitch": true //switch문 이상하면 에러내기
   },
